Replaced previous featured video with youtube Zia video, removed button from featured section, commented out several unused feature--code base needs to be cleaned up, but still more work to do before removing features that may be used again

--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
 
 		<!-- Featured -->
 
-			<section id="featured" class="video-container">				
-					<video autoplay muted loop id="featuredVideo">
+			<section id="featured" class="video-container">
+				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/mbkVJj4caxI?start=2&autoplay=1&mute=1" title="YouTube video player" frameborder="0"  allow="autoplay" allowfullscreen></iframe>		
+					<!-- <video autoplay muted loop id="featuredVideo">
 						<source src="images/Videos/1 - Grex Mega Mash - HD 1080p.mp4" type="video/mp4">
-					</video>
-					<button id="mute" class="mute-button" value="muted"><i class="fas fa-volume-mute"></i></button>
+					</video> -->
+					<!-- <button id="mute" class="mute-button" value="muted"><i class="fas fa-volume-mute"></i></button> -->
 					<!-- <header class="center">
 						<h2 class="textStroke">Featured</h2>
 					</header>
@@ -81,9 +82,9 @@
 					</article>
 					</div>
 				</div> -->
-					<footer>
+					<!-- <footer>
 						<a href="#projectArchive" class="button style2 down anchored">Next</a>
-					</footer>
+					</footer> -->
 			</section>
 
 
