removed duplicate project-archive-vid id

--- a/projectarchive.html
+++ b/projectarchive.html
@@ -39,7 +39,7 @@
 
         <!-- Past Archive -->
             <section id="pastArchive" class="video-container">
-			<video autoplay muted loop id="project-archive-vid">
+			<video autoplay muted loop id="project-archive-video">
 				<source src="images/Network-Fullscreen.mp4" type="video/mp4">
 			</video>
 				<div class="content">
