Updated socials on project archive footer

--- a/projectarchive.html
+++ b/projectarchive.html
@@ -84,8 +84,9 @@
 
 				<!-- Icons -->
 					<ul class="icons">
-						<li><a href="https://www.instagram.com/samichaels/" target="_blank" aria-label="Spencer Michaels Instagram" class="icon brands fa-instagram" rel="noopener"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.facebook.com/spencer.michaels.1/" target="_blank" aria-label="Spencer Michaels Facebook" class="icon brands fa-facebook" rel="noopener"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.youtube.com/channel/UChMIMDZhNNaodt_LLT4b74g" aria-label="3POINT DESIGN Youtube" target="_blank" class="icon brands fa-youtube" rel="noopener"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.instagram.com/3pointdesignllc/" aria-label="3POINT DESIGN Instagram"target="_blank" class="icon brands fa-instagram" rel="noopener"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.facebook.com/3Point-Design-LLC-104990828361886" aria-label="3POINT DESIGN Facebook" target="_blank" class="icon brands fa-facebook" rel="noopener"><span class="label">LinkedIn</span></a></li>
 					</ul>
 
 				<!-- Menu -->
