Updated meta description

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="title" property="og:title" content="3POINT DESIGN" />
 		<meta property="og:type" content="Website" />
 		<meta name="image" property="og:image" content="https://i.imgur.com/GwR5vlQ.jpg" />
-		<meta name="description" property="og:description" content="we are an experienced professional concert lighting design company available for hire" /><meta name="author" content="Jeremy Seckinger" />
+		<meta name="description" property="og:description" content="we are an experienced professional concert lighting design company available for hire, specializing in MA lighting consoles and Vectorworks drafting" /><meta name="author" content="Jeremy Seckinger" />
 		<meta name="google-site-verification" content="W0RnPVVQLrkoKWHw_dptuUqLfhSJhjT8jGq1bw-mwfI" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/main.css" />
